# gamizo

./: .gitignore  .replit  HtmlToPy.py  app.py  index.html  key.json  main.py  package.json  pyproject.toml  requirements.txt  tempCodeRunnerFile.py
WebScraping_playstore/: main.py
asset/: fonts.md
pages/: upload.html
src/: app.js  style.css  upload.css  video.js
static/asset/: palettel.md
static/css/: _card.scss  _categories.scss  _disclaimer.scss  _logo.scss  _mediaQuery.scss  _menu.scss  _report.scss  _shareMenu.scss  about-us.css  contactus.css  main.css  main.css.map  main.scss  menu.css  style.css  terms.html
static/js/: app.js  dropdown.js  forms.js  share-menu.js  video-size.js  video.js
template/: About-us.html  contact.html  index.html  privacy-policy.html  share-hidden.html  share.html  terms.html
templates/: contact.html  icon.html  index-copy.html  index.html  share.html  upload.html
