[tool.poetry]
name = "repl_python3_beta_gamizo"
version = "0.1.0"
description = ""
authors = ["ggsingla <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
botocore = "^1.21.1"
bs4 = "^0.0.1"
firebase-admin = "^5.0.1"
Flask = "^2.0.1"
boto3 = "^1.18.1"
gulp = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
